--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Voice Assistant is an easy way to use your phone and apps, hands-free."
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <title>Voice Assistant</title>
   </head>
   <body>
